// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 1 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "native-query-params",
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is a confirmed order for a product from a user.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Orders",
  "entity_name": null,
  "entity_type": "entity/TransactionTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date and time an order was submitted.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1387,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-04-30T00:00:00.000-07:00",
            "latest": "2020-04-19T00:00:00.000-07:00",
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 1,
      "max_value": null,
      "min_value": null,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/CreationTimestamp",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "Discount amount.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Discount",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 700,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 5.161255547580321,
            "max": 61.69684269960571,
            "min": 0.17088996672584322,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 35,
      "max_value": null,
      "min_value": null,
      "name": "DISCOUNT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Discount",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "This is a unique ID for the product. It is also called the “Invoice number” or “Confirmation number” in customer facing emails and screens.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 10000,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 5000.5,
            "max": 10000,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 2,
      "max_value": 17624,
      "min_value": 1,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/PK",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The product ID. This is an internal identifier for the product, NOT the SKU.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Product ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 100.5084,
            "max": 200,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": 24,
      "has_field_values": "none",
      "id": 3,
      "max_value": 200,
      "min_value": 1,
      "name": "PRODUCT_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/FK",
      "table_id": 1,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 200,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 100.5,
              "max": 200,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 24,
        "max_value": 200,
        "min_value": 1,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "special_type": "type/PK",
        "table_id": 3,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "Number of products bought.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Quantity",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 62,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.7015,
            "max": 100,
            "min": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 36,
      "max_value": null,
      "min_value": null,
      "name": "QUANTITY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Quantity",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The raw, pre-tax cost of the order. Note that this might be different in the future from the product price due to promotions, credits, etc.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Subtotal",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 340,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 77.01295465356537,
            "max": 148.22900526552291,
            "min": 15.691943673970439,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 4,
      "max_value": 99.37,
      "min_value": 12.02,
      "name": "SUBTOTAL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "This is the amount of local and federal taxes that are collected on the purchase. Note that other governmental fees on some products are not included here, but instead are accounted for in the subtotal.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Tax",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 797,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.8722099999999875,
            "max": 11.12,
            "min": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 5,
      "max_value": 7.45,
      "min_value": 0,
      "name": "TAX",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The total billed amount.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Total",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 10000,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 82.96014815230829,
            "max": 238.32732001721533,
            "min": 12.061602936923117,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 6,
      "max_value": 106.82000000000001,
      "min_value": 12.02,
      "name": "TOTAL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Income",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The id of the user who made this order. Note that in some cases where an order was created on behalf of a customer who phoned the order in, this might be the employee who handled the request.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "User ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 929,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 678.6893,
            "max": 1322,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": 13,
      "has_field_values": "none",
      "id": 7,
      "max_value": 2498,
      "min_value": 2,
      "name": "USER_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/FK",
      "table_id": 1,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "A unique identifier given to each user.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 2500,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 1250.5,
              "max": 2500,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 13,
        "max_value": 2500,
        "min_value": 1,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "special_type": "type/PK",
        "table_id": 2,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
  ],
  "id": 1,
  "metrics": Array [],
  "name": "ORDERS",
  "points_of_interest": null,
  "rows": 12805,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 2 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "native-query-params",
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is a user account. Note that employees and customer support staff will have accounts.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "People",
  "entity_name": null,
  "entity_type": "entity/UserTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The street address of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Address",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2490,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 20.85,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 8,
      "max_value": null,
      "min_value": null,
      "name": "ADDRESS",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Date",
      "caveats": null,
      "database_type": "DATE",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date of birth of the user",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Birth Date",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2308,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "1958-04-26T00:00:00.000-08:00",
            "latest": "2000-04-03T00:00:00.000-07:00",
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 9,
      "max_value": null,
      "min_value": null,
      "name": "BIRTH_DATE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The city of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "City",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1966,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 8.284,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 10,
      "max_value": null,
      "min_value": null,
      "name": "CITY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/City",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date the user record was created. Also referred to as the user’s \\"join date\\"",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 992,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-04-19T00:00:00.000-07:00",
            "latest": "2019-04-19T00:00:00.000-07:00",
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 11,
      "max_value": null,
      "min_value": null,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/CreationTimestamp",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The contact email for the account.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Email",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 24.1824,
            "percent-email": 1,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 12,
      "max_value": null,
      "min_value": null,
      "name": "EMAIL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Email",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "A unique identifier given to each user.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 1250.5,
            "max": 2500,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 13,
      "max_value": 2500,
      "min_value": 1,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/PK",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Coordinate",
      },
      "description": "This is the latitude of the user on sign-up. It might be updated in the future to the last seen location.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            0.1,
          ],
          "name": "Bin every 0.1 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            1,
          ],
          "name": "Bin every 1 degree",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            10,
          ],
          "name": "Bin every 10 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            20,
          ],
          "name": "Bin every 20 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Coordinate",
        },
      ],
      "dimensions": Array [],
      "display_name": "Latitude",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2491,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 39.879346704840046,
            "max": 70.6355001,
            "min": 25.775827,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 14,
      "max_value": 89.98241873383432,
      "min_value": -89.96310010740648,
      "name": "LATITUDE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Latitude",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Coordinate",
      },
      "description": "This is the longitude of the user on sign-up. It might be updated in the future to the last seen location.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            0.1,
          ],
          "name": "Bin every 0.1 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            1,
          ],
          "name": "Bin every 1 degree",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            10,
          ],
          "name": "Bin every 10 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            20,
          ],
          "name": "Bin every 20 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Coordinate",
        },
      ],
      "dimensions": Array [],
      "display_name": "Longitude",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2491,
        },
        "type": Object {
          "type/Number": Object {
            "avg": -95.18741780364007,
            "max": -67.96735199999999,
            "min": -166.5425726,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 15,
      "max_value": 179.73650520575882,
      "min_value": -179.30480334715446,
      "name": "LONGITUDE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Longitude",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The name of the user who owns an account",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Name",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2499,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 13.532,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 16,
      "max_value": null,
      "min_value": null,
      "name": "NAME",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Name",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "This is the salted password of the user. It should not be visible",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Password",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 36,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 17,
      "max_value": null,
      "min_value": null,
      "name": "PASSWORD",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The channel through which we acquired this user. Valid values include: Affiliate, Facebook, Google, Organic and Twitter",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Source",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 5,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 7.4084,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 18,
      "max_value": null,
      "min_value": null,
      "name": "SOURCE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Source",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The state or province of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "State",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 49,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 2,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 19,
      "max_value": null,
      "min_value": null,
      "name": "STATE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/State",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The postal code of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Zip",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2235,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 5,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 20,
      "max_value": null,
      "min_value": null,
      "name": "ZIP",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/ZipCode",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 2,
  "metrics": Array [],
  "name": "PEOPLE",
  "points_of_interest": null,
  "rows": 2500,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 3 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "native-query-params",
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is our product catalog. It includes all products ever sold by the Sample Company.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Products",
  "entity_name": null,
  "entity_type": "entity/ProductTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The type of product, valid values include: Doohicky, Gadget, Gizmo and Widget",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Category",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 4,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 6.375,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 21,
      "max_value": null,
      "min_value": null,
      "name": "CATEGORY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Category",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date the product was added to our catalog.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 186,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-04-26T00:00:00.000-07:00",
            "latest": "2019-04-15T00:00:00.000-07:00",
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 22,
      "max_value": null,
      "min_value": null,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/CreationTimestamp",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The international article number. A 13 digit number uniquely identifying the product.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Ean",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 13,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 23,
      "max_value": null,
      "min_value": null,
      "name": "EAN",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 100.5,
            "max": 200,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 24,
      "max_value": 200,
      "min_value": 1,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/PK",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The list price of the product. Note that this is not always the price the product sold for due to discounts, promotions, etc.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Price",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 170,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 55.74639966792074,
            "max": 98.81933684368194,
            "min": 15.691943673970439,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 25,
      "max_value": 99.37,
      "min_value": 12.02,
      "name": "PRICE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The average rating users have given the product. This ranges from 1 - 5",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Rating",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 23,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.4715000000000007,
            "max": 5,
            "min": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 26,
      "max_value": 5,
      "min_value": 0,
      "name": "RATING",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Score",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The name of the product as it should be displayed to customers.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Title",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 199,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 21.495,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 27,
      "max_value": null,
      "min_value": null,
      "name": "TITLE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Title",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The source of the product.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Vendor",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 20.6,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 28,
      "max_value": null,
      "min_value": null,
      "name": "VENDOR",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Company",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 3,
  "metrics": Array [],
  "name": "PRODUCTS",
  "points_of_interest": null,
  "rows": 200,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 4 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "native-query-params",
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "These are reviews our customers have left on products. Note that these are not tied to orders so it is possible people have reviewed products they did not purchase from us.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Reviews",
  "entity_name": null,
  "entity_type": "entity/GenericTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CLOB",
      "default_dimension_option": null,
      "description": "The review the user left. Limited to 2000 characters.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Body",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1112,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 180.6501798561151,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 29,
      "max_value": null,
      "min_value": null,
      "name": "BODY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": false,
      "special_type": "type/Description",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The day and time a review was written by a user.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 720,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-06-03T00:00:00.000-07:00",
            "latest": "2020-04-19T00:00:00.000-07:00",
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 30,
      "max_value": null,
      "min_value": null,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/CreationTimestamp",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "A unique internal identifier for the review. Should not be used externally.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1112,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 556.5,
            "max": 1112,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 31,
      "max_value": 1078,
      "min_value": 1,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/PK",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The product the review was for",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Product ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 176,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 96.88489208633094,
            "max": 200,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": 24,
      "has_field_values": "none",
      "id": 32,
      "max_value": 200,
      "min_value": 1,
      "name": "PRODUCT_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/FK",
      "table_id": 4,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 200,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 100.5,
              "max": 200,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 24,
        "max_value": 200,
        "min_value": 1,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "special_type": "type/PK",
        "table_id": 3,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "SMALLINT",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The rating (on a scale of 1-5) the user left.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Rating",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 5,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.987410071942446,
            "max": 5,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 33,
      "max_value": 5,
      "min_value": 1,
      "name": "RATING",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": "type/Score",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The user who left the review",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Reviewer",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1076,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 9.972122302158274,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 34,
      "max_value": null,
      "min_value": null,
      "name": "REVIEWER",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "special_type": null,
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 4,
  "metrics": Array [],
  "name": "REVIEWS",
  "points_of_interest": null,
  "rows": 984,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;
